--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Barcode Scanner</title>
+<title>Flooreno Barcode Scanner</title>
 
 <style>
     body {
@@ -83,7 +83,7 @@
 <body>
 
 <div class="container">
-    <h2>Item Scanner</h2>
+    <h2>Flooreno Item Scanner</h2>
 
     <div class="inputs">
         <input id="scanInput" type="text" placeholder="Scan barcode" autofocus>
@@ -188,3 +188,4 @@ function exportCSV() {
 
 </body>
 </html>
+
