--- a/index.html
+++ b/index.html
@@ -2,81 +2,102 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Flooreno Barcode Scanner</title>
+<title>Flooreno Item Scanner</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 <style>
     body {
         font-family: Arial, sans-serif;
         background: #f4f6f8;
-        padding: 30px;
+        padding: 10px;
+        margin: 0;
     }
 
     .container {
-        max-width: 650px;
-        margin: auto;
+        max-width: 100%;
         background: #fff;
-        padding: 20px;
+        padding: 12px;
         border-radius: 8px;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
 
     h2 {
         text-align: center;
-        margin-bottom: 20px;
+        margin: 10px 0 15px;
+        font-size: 20px;
     }
 
     .inputs {
         display: flex;
-        gap: 10px;
-        margin-bottom: 15px;
+        gap: 8px;
+        margin-bottom: 10px;
     }
 
     input {
         flex: 1;
-        padding: 10px;
+        padding: 12px;
         font-size: 16px;
+        border-radius: 6px;
+        border: 1px solid #ccc;
     }
 
     table {
         width: 100%;
         border-collapse: collapse;
-        margin-top: 15px;
+        margin-top: 10px;
+        font-size: 14px;
     }
 
     th, td {
         border: 1px solid #ddd;
-        padding: 8px;
+        padding: 6px;
         text-align: center;
     }
 
     th {
         background: #f0f0f0;
+        font-weight: bold;
     }
 
     td input {
-        width: 70px;
-        padding: 5px;
+        width: 60px;
+        padding: 6px;
+        font-size: 14px;
         text-align: center;
-    }
-
-    button {
-        padding: 8px 12px;
-        cursor: pointer;
-        border: none;
-        border-radius: 4px;
     }
 
     .delete-btn {
         background: #e74c3c;
         color: #fff;
+        border: none;
+        padding: 6px 10px;
+        border-radius: 4px;
+    }
+
+    .actions {
+        display: flex;
+        gap: 8px;
+        margin-top: 12px;
     }
 
     .export-btn {
-        margin-top: 15px;
-        width: 100%;
+        flex: 1;
         background: #2ecc71;
         color: #fff;
+        padding: 12px;
         font-size: 16px;
+        border-radius: 6px;
+        border: none;
+    }
+
+    .clear-btn {
+        flex: 1;
+        background: #e67e22;
+        color: #fff;
+        padding: 12px;
+        font-size: 16px;
+        border-radius: 6px;
+        border: none;
     }
 </style>
 </head>
@@ -86,8 +107,21 @@
     <h2>Flooreno Item Scanner</h2>
 
     <div class="inputs">
-        <input id="scanInput" type="text" placeholder="Scan barcode" autofocus>
-        <input id="qtyInput" type="number" placeholder="Qty" min="1">
+        <input
+            id="scanInput"
+            type="text"
+            placeholder="Scan barcode"
+            autofocus
+            enterkeyhint="next"
+        >
+        <input
+            id="qtyInput"
+            type="number"
+            placeholder="Qty"
+            min="1"
+            inputmode="numeric"
+            enterkeyhint="done"
+        >
     </div>
 
     <table>
@@ -96,13 +130,16 @@
                 <th>#</th>
                 <th>System Id</th>
                 <th>Qty</th>
-                <th>Action</th>
+                <th>✖</th>
             </tr>
         </thead>
         <tbody id="tableBody"></tbody>
     </table>
 
-    <button class="export-btn" onclick="exportCSV()">Export to Excel (CSV)</button>
+    <div class="actions">
+        <button class="export-btn" onclick="exportCSV()">Export CSV</button>
+        <button class="clear-btn" onclick="clearAll()">Clear All</button>
+    </div>
 </div>
 
 <script>
@@ -110,7 +147,9 @@ const scanInput = document.getElementById("scanInput");
 const qtyInput = document.getElementById("qtyInput");
 const tableBody = document.getElementById("tableBody");
 
-/* Scanner → move to qty */
+/* ----------------- INPUT HANDLING ----------------- */
+
+// Scanner / desktop
 scanInput.addEventListener("keydown", e => {
     if (e.key === "Enter") {
         e.preventDefault();
@@ -121,7 +160,7 @@ scanInput.addEventListener("keydown", e => {
     }
 });
 
-/* Qty Enter → add row */
+// Qty Enter (desktop + iPhone return)
 qtyInput.addEventListener("keydown", e => {
     if (e.key === "Enter") {
         e.preventDefault();
@@ -129,63 +168,99 @@ qtyInput.addEventListener("keydown", e => {
     }
 });
 
+// iPhone ✓ Done key
+qtyInput.addEventListener("change", () => {
+    if (scanInput.value && qtyInput.value) {
+        addRow();
+    }
+});
+
+/* ----------------- CORE LOGIC ----------------- */
+
 function addRow() {
     const barcode = scanInput.value.trim();
     const qty = qtyInput.value.trim();
     if (!barcode || !qty) return;
 
     const tr = document.createElement("tr");
-
     tr.innerHTML = `
         <td class="row-num"></td>
         <td>${barcode}</td>
         <td><input type="number" value="${qty}" min="1"></td>
-        <td><button class="delete-btn">Delete</button></td>
+        <td><button class="delete-btn">X</button></td>
     `;
 
     tr.querySelector(".delete-btn").onclick = () => {
         tr.remove();
         renumberRows();
+        saveTable();
     };
 
-    // 🔼 Insert at TOP
+    tr.querySelector("input").onchange = saveTable;
+
     tableBody.prepend(tr);
-
     renumberRows();
+    saveTable();
 
-    // Reset & loop
     scanInput.value = "";
     qtyInput.value = "";
     scanInput.focus();
 }
 
 function renumberRows() {
-    [...tableBody.children].forEach((row, index) => {
-        row.querySelector(".row-num").innerText = index + 1;
+    [...tableBody.children].forEach((row, i) => {
+        row.querySelector(".row-num").innerText = i + 1;
     });
+}
+
+/* ----------------- STORAGE ----------------- */
+
+function saveTable() {
+    const data = [];
+    tableBody.querySelectorAll("tr").forEach(row => {
+        data.push({
+            id: row.children[1].innerText,
+            qty: row.children[2].querySelector("input").value
+        });
+    });
+    localStorage.setItem("scannedItems", JSON.stringify(data));
+}
+
+function loadTable() {
+    const data = JSON.parse(localStorage.getItem("scannedItems") || "[]");
+    data.reverse().forEach(item => {
+        scanInput.value = item.id;
+        qtyInput.value = item.qty;
+        addRow();
+    });
+}
+
+/* ----------------- ACTIONS ----------------- */
+
+function clearAll() {
+    if (!confirm("Clear all scanned items?")) return;
+    tableBody.innerHTML = "";
+    localStorage.removeItem("scannedItems");
 }
 
 function exportCSV() {
     let csv = "System Id,Qty\n";
-
     tableBody.querySelectorAll("tr").forEach(row => {
-        const systemId = row.children[1].innerText;
-        const qty = row.children[2].querySelector("input").value;
-        csv += `${systemId},${qty}\n`;
+        csv += `${row.children[1].innerText},${row.children[2].querySelector("input").value}\n`;
     });
 
     const blob = new Blob([csv], { type: "text/csv" });
     const url = URL.createObjectURL(blob);
-
     const a = document.createElement("a");
     a.href = url;
     a.download = "scanned_items.csv";
     a.click();
-
     URL.revokeObjectURL(url);
 }
+
+/* Load saved data on page load */
+loadTable();
 </script>
 
 </body>
 </html>
-
