--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@ button {
 
 #video {
     width: 100%;
+    height: 200px;
     border-radius: 6px;
     display: none;
     margin-bottom: 10px;
+    object-fit: cover;
 }
+
 
 .inputs {
     display: flex;
@@ -334,4 +337,5 @@ load();
 
 </body>
 </html>
+
 
