--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@ th, td {
     white-space: nowrap;
 }
 
+th:nth-child(2), td:nth-child(2) {
+    width: 40%;
+}
+
+th:nth-child(3), td:nth-child(3) {
+    width: 25%;
+}
+
 .delete-btn {
     background: #e74c3c;
     color: #fff;
@@ -155,7 +163,7 @@ h2 {
             <thead>
                 <tr>
                     <th>#</th>
-                    <th>System Id</th>
+                    <th>SKU</th>
                     <th>Qty</th>
                     <th>X</th>
                 </tr>
@@ -338,6 +346,7 @@ load();
 
 </body>
 </html>
+
 
 
 
